--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,7 @@
     <title>{% block title %}{% endblock title %}</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    
+    <link rel="icon" href="{% static 'images/cod.png' %}">
     <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:200,300,400,600,700,800,900&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -75,7 +75,7 @@
                   <div class="dropdown-menu" aria-labelledby="dropdownMenuButton" style="margin-top: -5px;">
                   
                   {% if request.user.is_staff %}
-                    <a class="dropdown-item" href="../../{{request.user}}">E'lonlar</a>
+                    <a class="dropdown-item" href="../../{{request.user}}/cabinet">E'lonlar</a>
                     <a href="../../{{request.user}}/add" class="dropdown-item">E'lon berish</a>
                   {% endif %}
                   
