--- a/templates/contact.html
+++ b/templates/contact.html
@@ -14,11 +14,18 @@
         </div>
       </div>
     </section>
-
+      
     <section class="ftco-section contact-section">
       <div class="container">
+      
         <div class="row block-9 justify-content-center mb-5">
+       
           <div class="col-md-8 mb-md-5">
+           {% for m in messages %} 
+            <div class="alert alert-success" role="alert">
+                {{ m }}
+            </div>
+            {% endfor %}
           	<h2 class="text-center">If you got any questions <br>please do not hesitate to send us a message</h2>
             <form action="{% url 'contact' %}" class="bg-light p-5 contact-form" method="POST">
               {% csrf_token %}
